crates/vacro-report/tests/ui/parser.rs
fn main() {
    macros::parse_roles!({
        a: hello,
        b: world!,
    });
}
